ps2write - fix a DSC comment

Bug #695082 "ps2write: Some "%%BeginResource" DSC comments have only one "%" character"

A DSC comment was emitted using a printf format string without escaping the
"%"s

No differences expected.